--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,108 @@
-
+<header>
+  <div><i>icon</i><a href="#">vitalii lynnyk</a></div>
+  <nav>
+    <ul>
+      <li><a href="#">home</a></li>
+      <li><a href="#">projects</a></li>
+      <li><a href="#">resuume</a></li>
+      <li><a href="#">contacts</a></li>
+      <li><a href="#">change theme</a></li>
+    </ul>
+  </nav>
+</header>
+<main>
+  <section>
+    <div>
+      <img src=""
+           alt="logo" />
+      <h1>Vitalii Lynnyk</h1>
+      <p>Junior javaScript dev</p>
+    </div>
+    <div>
+      Info about me
+      Non asperiores, eaque minima
+      nobis provident dolores molestias
+      nisi quisquam atque nam reprehenderit
+      reiciendis soluta veritatis laudantium!
+      Numquam quibusdam aliquid in optio.
+    </div>
+    <div>
+      <h5>find me</h5>
+      <ul>
+        <li><a href="#"><i>github</i></a></li>
+        <li><a href="#"><i>linkedin</i></a></li>
+        <li><a href="#"><i>twitter</i></a></li>
+        <li><a href="#"><i>codepen</i></a></li>
+        <li><a href="#"><i>facebook</i></a></li>
+      </ul>
+    </div>
+  </section>
+  <section>
+    <h3>Skills</h3>
+    <ul>
+      <li>
+        <i>img</i>
+        <p>javaScript</p>
+      </li>
+      <li>
+        <i>img</i>
+        <p>Node.js</p>
+      </li>
+      <li>
+        <i>img</i>
+        <p>angular</p>
+      </li>
+      <li>
+        <i>img</i>
+        <p>Java</p>
+      </li>
+      <li>
+        <i>img</i>
+        <p>TypeScript</p>
+      </li>
+      <li>
+        <i>img</i>
+        <p>Docker</p>
+      </li>
+      <li>
+        <i>img</i>
+        <p>css</p>
+      </li>
+      <li>
+        <i>img</i>
+        <p>html</p>
+      </li>
+      <li>
+        <i>img</i>
+        <p>MongoDb</p>
+      </li>
+      <li>
+        <i>img</i>
+        <p>PostgreSql</p>
+      </li>
+      <li>
+        <i>img</i>
+        <p>Firebase</p>
+      </li>
+      <li>
+        <i>img</i>
+        <p>MySql</p>
+      </li>
+      <li>
+        <i>img</i>
+        <p>Android</p>
+      </li>
+    </ul>
+  </section>
+</main>
+<footer>
+  <ul>
+    <li><a href="#"><i>github</i></a></li>
+    <li><a href="#"><i>linkedin</i></a></li>
+    <li><a href="#"><i>twitter</i></a></li>
+    <li><a href="#"><i>codepen</i></a></li>
+    <li><a href="#"><i>facebook</i></a></li>
+  </ul>
+  <p>Made with love by <a href="#">Vitalii</a></p>
+  <p>Copyright © 2020 | All Rights Reserved</p>
+</footer>
