--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <header>
-  <div><i>icon</i><a href="#">vitalii lynnyk</a></div>
+  <div class="logo">
+    <i class="fa fa-coffee"></i>
+    <a href="#">vitalii lynnyk</a>
+  </div>
   <nav>
     <ul>
       <li><a href="#">home</a></li>
@@ -10,7 +13,7 @@
     </ul>
   </nav>
 </header>
-<main>
+<!-- <main>
   <section>
     <div>
       <img src=""
@@ -18,14 +21,18 @@
       <h1>Vitalii Lynnyk</h1>
       <p>Junior javaScript dev</p>
     </div>
-    <div>
-      Info about me
-      Non asperiores, eaque minima
-      nobis provident dolores molestias
-      nisi quisquam atque nam reprehenderit
-      reiciendis soluta veritatis laudantium!
-      Numquam quibusdam aliquid in optio.
-    </div>
+    <details>
+      <summary>
+        Info about me
+      </summary>
+      <p>
+        Non asperiores, eaque minima
+        nobis provident dolores molestias
+        nisi quisquam atque nam reprehenderit
+        reiciendis soluta veritatis laudantium!
+        Numquam quibusdam aliquid in optio.
+      </p>
+    </details>
     <div>
       <h5>find me</h5>
       <ul>
@@ -105,4 +112,4 @@
   </ul>
   <p>Made with love by <a href="#">Vitalii</a></p>
   <p>Copyright © 2020 | All Rights Reserved</p>
-</footer>
+</footer> -->
