fix header html & scss, add img to assets

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -122,6 +122,6 @@
     <li><a href="#"><i>codepen</i></a></li>
     <li><a href="#"><i>facebook</i></a></li>
   </ul>
-  <p>Made with love by <a href="#">Vitalii</a></p>
+  <p>created by <a href="#">Vitalii lynnyk</a></p>
   <p>Copyright © 2020 | All Rights Reserved</p>
 </footer> -->
