--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,30 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
-// :root {
-//   --bg-color: #fff;
-//   --text-color: rgb(34, 34, 34);
-//   --second-text-color: rgba(34, 34, 34, 0.5);
-//   --border-color: #dadce0;
-//   --black-color: #222;
-//   --white-color: #fff;
-//   --danger-color: red;
-//   --text-size: 32px;
-//   --box-sh: 0 0 4px 0 rgba(0, 0, 0, 0.08), 0 3px 4px 0 rgba(0, 0, 0, 0.06),
-//     0 1px 5px 0 rgba(0, 0, 0, 0.2);
-// }
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: inherit;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  line-height: 1.6;
   min-height: 100vh;
-  box-sizing: border-box;
-  // font-size: 62.5%;
+  font-size: 1.6rem;
 
   a {
     text-decoration: none;
     color: black;
+    font-size: inherit;
   }
 }
