fix header html & scss, add left column to main

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,46 +17,54 @@
 
   <nav class="header-nav">
     <ul class="header-nav__list">
-      <li class="header-nav__list-item"><a href="#">home</a></li>
-      <li class="header-nav__list-item"><a href="#">projects</a></li>
-      <li class="header-nav__list-item"><a href="#">resuume</a></li>
-      <li class="header-nav__list-item"><a href="#">contacts</a></li>
-      <li class="header-nav__list-item"><a href="#">change theme</a></li>
+      <li class="header-nav__list-item"><a href="#">Home</a></li>
+      <li class="header-nav__list-item"><a href="#">Projects</a></li>
+      <li class="header-nav__list-item"><a href="#">Resume</a></li>
+      <li class="header-nav__list-item"><a href="#">Contacts</a></li>
+      <li class="header-nav__list-item"><a href="#">Change Theme</a></li>
     </ul>
   </nav>
 </header>
-<!-- <main>
-  <section>
-    <div>
-      <img src=""
+<main class="main">
+  <section class="main-left">
+    <div class="main-left-header">
+      <img src="../assets/vitaliilynnyk.png"
            alt="logo" />
       <h1>Vitalii Lynnyk</h1>
       <p>Junior javaScript dev</p>
     </div>
-    <details>
+    <details class="main-left-details">
       <summary>
-        Info about me
+        It is a long established fact that a reader will be
+        distracted by the readable content of a page when looking
+        at its layout. The point of using Lorem Ipsum is that it has a
+        more-or-less normal distribution of letters, as opposed to using
+        'Content here, content here'.
       </summary>
       <p>
-        Non asperiores, eaque minima
-        nobis provident dolores molestias
-        nisi quisquam atque nam reprehenderit
-        reiciendis soluta veritatis laudantium!
-        Numquam quibusdam aliquid in optio.
+        It is a long established fact that a reader will be distracted
+        by the readable content of a page when looking at its layout.
+        The point of using Lorem Ipsum is that it has a more-or-less normal
+        distribution of letters, as opposed to using 'Content here, content here',
+        making it look like readable English. Many desktop publishing packages
+        and web page editors now use Lorem Ipsum as their default model text,
+        and a search for 'lorem ipsum' will uncover many web sites still in their
+        infancy. Various versions have evolved over the years, sometimes by accident,
+        sometimes on purpose (injected humour and the like).
       </p>
     </details>
-    <div>
+    <div class="main-left-footer">
       <h5>find me</h5>
       <ul>
-        <li><a href="#"><i>github</i></a></li>
-        <li><a href="#"><i>linkedin</i></a></li>
-        <li><a href="#"><i>twitter</i></a></li>
-        <li><a href="#"><i>codepen</i></a></li>
-        <li><a href="#"><i>facebook</i></a></li>
+        <li><a href="#"><i class="fa fa-github"></i></a></li>
+        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fa fa-codepen"></i></a></li>
+        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
       </ul>
     </div>
   </section>
-  <section>
+  <section class="main-right">
     <h3>Skills</h3>
     <ul>
       <li>
@@ -114,14 +122,14 @@
     </ul>
   </section>
 </main>
-<footer>
-  <ul>
-    <li><a href="#"><i>github</i></a></li>
-    <li><a href="#"><i>linkedin</i></a></li>
-    <li><a href="#"><i>twitter</i></a></li>
-    <li><a href="#"><i>codepen</i></a></li>
-    <li><a href="#"><i>facebook</i></a></li>
-  </ul>
-  <p>created by <a href="#">Vitalii lynnyk</a></p>
-  <p>Copyright © 2020 | All Rights Reserved</p>
-</footer> -->
+<!--<footer>-->
+<!--  <ul>-->
+<!--    <li><a href="#"><i>github</i></a></li>-->
+<!--    <li><a href="#"><i>linkedin</i></a></li>-->
+<!--    <li><a href="#"><i>twitter</i></a></li>-->
+<!--    <li><a href="#"><i>codepen</i></a></li>-->
+<!--    <li><a href="#"><i>facebook</i></a></li>-->
+<!--  </ul>-->
+<!--  <p>created by <a href="#">Vitalii lynnyk</a></p>-->
+<!--  <p>Copyright © 2020 | All Rights Reserved</p>-->
+<!--</footer> -->
