add test right column to main

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,20 +53,20 @@
         sometimes on purpose (injected humour and the like).
       </p>
     </details>
-    <div class="main-left-footer">
-      <h5>find me</h5>
-      <ul>
-        <li><a href="#"><i class="fa fa-github"></i></a></li>
-        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fa fa-codepen"></i></a></li>
-        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-      </ul>
-    </div>
+<!--    <div class="main-left-footer">-->
+<!--      <h5>find me</h5>-->
+<!--      <ul>-->
+<!--        <li><a href="#"><i class="fa fa-github"></i></a></li>-->
+<!--        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>-->
+<!--        <li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
+<!--        <li><a href="#"><i class="fa fa-codepen"></i></a></li>-->
+<!--        <li><a href="#"><i class="fa fa-facebook"></i></a></li>-->
+<!--      </ul>-->
+<!--    </div>-->
   </section>
   <section class="main-right">
-    <h3>Skills</h3>
-    <ul>
+    <h3 class="main-right__title">Skills</h3>
+    <ul class="main-right__list">
       <li>
         <i>img</i>
         <p>javaScript</p>
