--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -59,8 +59,8 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
       height: 3rem;
       width: 3rem;
       position: fixed;
-      top: 0;
-      right: 0;
+      top: 10px;
+      right: 10px;
       border-radius: 50%;
       z-index: 2000;
       //box-shadow: 0 1rem 3rem rgba(black, 0.1);
@@ -102,8 +102,8 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
       width: 3rem;
       border-radius: 50%;
       position: fixed;
-      top: 0;
-      right: 0;
+      top: 10px;
+      right: 10px;
       background-image: radial-gradient($color-primary-light, $color-primary-dark);
       z-index: 1000;
       transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
@@ -217,11 +217,19 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
   display: grid;
   grid-template-columns: 1fr 1fr;
 
+  @media (max-width: 730px) {
+    grid-template-columns: 1fr;
+  }
+
   &-left {
     padding: 10rem 2.5rem;
     display: grid;
-    grid-template-rows: 1fr .5fr 200px;
+    grid-template-rows: repeat(auto-fill, minmax(200px, 1fr));;
     grid-gap: 1rem;
+
+    @media (max-width: 730px) {
+      padding-bottom: 0;
+    }
 
     &-header {
       margin: 0 auto;
@@ -255,6 +263,23 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
   }
 
   &-right {
+    padding: 10rem 2.5rem;
+    grid-gap: 1rem;
 
+    &__title {
+      font-size: 5rem;
+    }
+
+    &__list {
+      list-style: none;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      grid-auto-rows: auto;
+
+      li {
+        border: 1px solid red;
+        padding: .5rem;
+      }
+    }
   }
 }
