add @mdi/font icons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
   <section class="main-left">
     <div class="main-left-header">
       <img src="../assets/vitaliilynnyk.png"
-           alt="logo" />
+           alt="logo"/>
       <h1>Vitalii Lynnyk</h1>
       <p>Junior javaScript dev</p>
     </div>
@@ -53,25 +53,21 @@
         sometimes on purpose (injected humour and the like).
       </p>
     </details>
-<!--    <div class="main-left-footer">-->
-<!--      <h5>find me</h5>-->
-<!--      <ul>-->
-<!--        <li><a href="#"><i class="fa fa-github"></i></a></li>-->
-<!--        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>-->
-<!--        <li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
-<!--        <li><a href="#"><i class="fa fa-codepen"></i></a></li>-->
-<!--        <li><a href="#"><i class="fa fa-facebook"></i></a></li>-->
-<!--      </ul>-->
-<!--    </div>-->
   </section>
   <section class="main-right">
     <h3 class="main-right__title">Skills</h3>
     <ul class="main-right__list">
       <li>
-        <i>img</i>
+        <i class="material-icons mdi-language-javascript">
+          mdi-language-javascript
+        </i>
         <p>javaScript</p>
+
+        <i class="mdi mdi-angular" aria-hidden="true">mdi-dumbbell</i>
       </li>
       <li>
+        <i class="mdi-language-css3"></i>
+
         <i>img</i>
         <p>Node.js</p>
       </li>
@@ -122,14 +118,16 @@
     </ul>
   </section>
 </main>
-<!--<footer>-->
-<!--  <ul>-->
-<!--    <li><a href="#"><i>github</i></a></li>-->
-<!--    <li><a href="#"><i>linkedin</i></a></li>-->
-<!--    <li><a href="#"><i>twitter</i></a></li>-->
-<!--    <li><a href="#"><i>codepen</i></a></li>-->
-<!--    <li><a href="#"><i>facebook</i></a></li>-->
-<!--  </ul>-->
-<!--  <p>created by <a href="#">Vitalii lynnyk</a></p>-->
-<!--  <p>Copyright © 2020 | All Rights Reserved</p>-->
-<!--</footer> -->
+<footer class="footer">
+  <ul class="footer-list">
+    <li><a href="#"><i class="fa fa-github"></i></a></li>
+    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+    <li><a href="#"><i class="fa fa-codepen"></i></a></li>
+    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+  </ul>
+  <div class="footer-about">
+    <p>created by <a href="#">Vitalii lynnyk</a></p>
+    <p>Copyright © 2020 | All Rights Reserved</p>
+  </div>
+</footer>
