--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -92,6 +92,7 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
       &::before {
         top: -0.8rem;
       }
+
       &::after {
         top: 0.8rem;
       }
@@ -195,7 +196,7 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
           &:hover,
           &:active {
             background-position: 100%;
-           // color: $color-secondary-dark;
+            // color: $color-secondary-dark;
             transform: translateY(.1rem);
 
             @media (max-width: 730px) {
@@ -209,9 +210,6 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
 }
 
 
-
-
-
 .main {
   min-height: 100vh;
   display: grid;
@@ -222,9 +220,9 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
   }
 
   &-left {
-    padding: 10rem 2.5rem;
+    padding: 10rem 2.5rem 5rem 2.5rem;
     display: grid;
-    grid-template-rows: repeat(auto-fill, minmax(200px, 1fr));;
+    grid-template-rows: repeat(auto-fill, minmax(250px, 1fr));;
     grid-gap: 1rem;
 
     @media (max-width: 730px) {
@@ -263,8 +261,7 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
   }
 
   &-right {
-    padding: 10rem 2.5rem;
-    grid-gap: 1rem;
+    padding: 10rem 2.5rem 5rem 2.5rem;
 
     &__title {
       font-size: 5rem;
@@ -281,5 +278,64 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
         padding: .5rem;
       }
     }
+  }
+}
+
+
+.footer {
+  text-align: center;
+
+  &-list {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+
+    li {
+      display: inline-block;
+      margin: 0.15em;
+      position: relative;
+      //font-size: 1.2em;
+
+      a {
+        display: inline-block;
+
+        &:before {
+          transform: scale(1);
+          content: " ";
+          width: 60px;
+          height: 60px;
+          border-radius: 100%;
+          display: block;
+          background: linear-gradient(45deg, red, #002A8F);
+          transition: all 265ms ease-out;
+        }
+
+        &:hover:before {
+          transform: scale(0);
+          transition: all 265ms ease-in;
+        }
+
+        &:hover i {
+          transform: scale(2.2);
+          color: red;
+          background: -webkit-linear-gradient(45deg, red, #002A8F);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          transition: all 265ms ease-in;
+        }
+      }
+
+      i {
+        color: #fff;
+        position: absolute;
+        top: 21px;
+        left: 21px;
+        transition: all 265ms ease-out;
+      }
+    }
+  }
+
+  &-about {
+
   }
 }
