add techIcons to assets / change fa icons to mdi

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="header-logo">
-    <i class="fa fa-coffee header-logo__icon"></i>
+    <i class="mdi mdi-coffee header-logo__icon"></i>
     <a href="#"
        class="header-logo__name">vitalii lynnyk</a>
   </div>
@@ -58,73 +58,75 @@
     <h3 class="main-right__title">Skills</h3>
     <ul class="main-right__list">
       <li>
-        <i class="material-icons mdi-language-javascript">
-          mdi-language-javascript
-        </i>
+        <img src="../assets/techIcons/javascript-icon.svg">
         <p>javaScript</p>
-
-        <i class="mdi mdi-angular" aria-hidden="true">mdi-dumbbell</i>
       </li>
       <li>
-        <i class="mdi-language-css3"></i>
-
-        <i>img</i>
+        <img src="../assets/techIcons/nodejs-horizontal.svg">
         <p>Node.js</p>
       </li>
       <li>
-        <i>img</i>
+        <img src="../assets/techIcons/angular-icon.svg">
         <p>angular</p>
       </li>
       <li>
-        <i>img</i>
+        <img src="../assets/techIcons/reactjs-icon.svg">
+        <p>react</p>
+      </li>
+      <li>
+        <img src="../assets/techIcons/java-icon.svg">
         <p>Java</p>
       </li>
       <li>
-        <i>img</i>
+        <img src="../assets/techIcons/typescriptlang-icon.svg">
         <p>TypeScript</p>
       </li>
       <li>
-        <i>img</i>
+        <img src="../assets/techIcons/docker-icon.svg">
         <p>Docker</p>
       </li>
       <li>
-        <i>img</i>
-        <p>css</p>
+        <img src="../assets/techIcons/sass-lang-icon.svg">
+        <p>sass</p>
       </li>
       <li>
-        <i>img</i>
+        <img src="../assets/techIcons/w3_html5-icon.svg">
         <p>html</p>
       </li>
       <li>
-        <i>img</i>
+        <img src="../assets/techIcons/mongodb-icon.svg">
         <p>MongoDb</p>
       </li>
       <li>
-        <i>img</i>
+        <img src="../assets/techIcons/postgresql-icon.svg">
         <p>PostgreSql</p>
       </li>
       <li>
-        <i>img</i>
+        <img src="../assets/techIcons/firebase-icon.svg">
         <p>Firebase</p>
       </li>
       <li>
-        <i>img</i>
-        <p>MySql</p>
+        <img src="../assets/techIcons/sqlite-icon.svg">
+        <p>SqlLite</p>
       </li>
       <li>
-        <i>img</i>
-        <p>Android</p>
+        <img src="../assets/techIcons/android-icon.svg">
+        <p>android</p>
+      </li>
+      <li>
+        <img src="../assets/techIcons/js_webpack-icon.svg">
+        <p>webpack</p>
       </li>
     </ul>
   </section>
 </main>
 <footer class="footer">
   <ul class="footer-list">
-    <li><a href="#"><i class="fa fa-github"></i></a></li>
-    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-    <li><a href="#"><i class="fa fa-codepen"></i></a></li>
-    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+    <li><a href="#"><i class="mdi mdi-github"></i></a></li>
+    <li><a href="#"><i class="mdi mdi-linkedin"></i></a></li>
+    <li><a href="#"><i class="mdi mdi-twitter"></i></a></li>
+    <li><a href="#"><i class="mdi mdi-codepen"></i></a></li>
+    <li><a href="#"><i class="mdi mdi-facebook"></i></a></li>
   </ul>
   <div class="footer-about">
     <p>created by <a href="#">Vitalii lynnyk</a></p>
