--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -31,6 +31,7 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
   align-items: center;
 
   position: fixed;
+  z-index: 1;
   width: 100%;
 
   &-logo {
@@ -272,10 +273,20 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
       grid-auto-rows: auto;
+      grid-gap: 2rem;
+      text-align: center;
+      text-transform: uppercase;
 
       li {
-        border: 1px solid red;
         padding: .5rem;
+
+        img {
+          filter: grayscale(100%) brightness(70%) contrast(2);
+
+          &:hover {
+            filter: none;
+          }
+        }
       }
     }
   }
@@ -284,6 +295,7 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
 
 .footer {
   text-align: center;
+  padding: 2rem;
 
   &-list {
     list-style: none;
@@ -302,9 +314,8 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
         &:before {
           transform: scale(1);
           content: " ";
-          width: 60px;
-          height: 60px;
-          border-radius: 100%;
+          width: 5rem;
+          height: 5rem;
           display: block;
           background: linear-gradient(45deg, red, #002A8F);
           transition: all 265ms ease-out;
@@ -316,7 +327,7 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
         }
 
         &:hover i {
-          transform: scale(2.2);
+          transform: scale(2);
           color: red;
           background: -webkit-linear-gradient(45deg, red, #002A8F);
           -webkit-background-clip: text;
@@ -328,8 +339,9 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
       i {
         color: #fff;
         position: absolute;
-        top: 21px;
-        left: 21px;
+        font-size: 3rem;
+        top: 0.5rem;
+        left: 1rem;
         transition: all 265ms ease-out;
       }
     }
