--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,22 +35,15 @@
     </div>
     <details class="main-left-details">
       <summary>
-        It is a long established fact that a reader will be
-        distracted by the readable content of a page when looking
-        at its layout. The point of using Lorem Ipsum is that it has a
-        more-or-less normal distribution of letters, as opposed to using
-        'Content here, content here'.
+        Hello, i'm developer, from Cherkasy, Ukraine, currently living in Warsaw, Poland.<br>
+        Today, i'm a student of Vistula University, Computer Engineering, Masters degree.
       </summary>
       <p>
-        It is a long established fact that a reader will be distracted
-        by the readable content of a page when looking at its layout.
-        The point of using Lorem Ipsum is that it has a more-or-less normal
-        distribution of letters, as opposed to using 'Content here, content here',
-        making it look like readable English. Many desktop publishing packages
-        and web page editors now use Lorem Ipsum as their default model text,
-        and a search for 'lorem ipsum' will uncover many web sites still in their
-        infancy. Various versions have evolved over the years, sometimes by accident,
-        sometimes on purpose (injected humour and the like).
+        I'm passionate about programming.<br>
+        I graduated Cherkasy state technological University Software Engineering,
+        Bachelor degree with honors. <br> Every day i learn something new.
+
+        <button>Download CV</button>
       </p>
     </details>
   </section>
