--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<div appParticle></div>
+
 <header class="header">
   <div class="header-logo">
     <i class="mdi mdi-coffee header-logo__icon"></i>
