--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,3 +21,14 @@ body {
     font-size: inherit;
   }
 }
+
+.particles-js-canvas-el {
+  position: fixed !important;
+  height: 100vh;
+  min-height: 100vh;
+  max-height: 100vh;
+  width: 100vw;
+  min-width: 100vw;
+  max-width: 100vw;
+  z-index: -1;
+}
