add links href & alt attributes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,63 +53,63 @@
     <h3 class="main-right__title">Skills</h3>
     <ul class="main-right__list">
       <li>
-        <img src="../assets/techIcons/javascript-icon.svg">
+        <img src="../assets/techIcons/javascript-icon.svg" alt="javaScript">
         <p>javaScript</p>
       </li>
       <li>
-        <img src="../assets/techIcons/nodejs-horizontal.svg">
+        <img src="../assets/techIcons/nodejs-horizontal.svg" alt="node.js">
         <p>Node.js</p>
       </li>
       <li>
-        <img src="../assets/techIcons/angular-icon.svg">
+        <img src="../assets/techIcons/angular-icon.svg" alt="angular">
         <p>angular</p>
       </li>
       <li>
-        <img src="../assets/techIcons/reactjs-icon.svg">
+        <img src="../assets/techIcons/reactjs-icon.svg" alt="react">
         <p>react</p>
       </li>
       <li>
-        <img src="../assets/techIcons/java-icon.svg">
+        <img src="../assets/techIcons/java-icon.svg" alt="java">
         <p>Java</p>
       </li>
       <li>
-        <img src="../assets/techIcons/typescriptlang-icon.svg">
+        <img src="../assets/techIcons/typescriptlang-icon.svg" alt="typeScript">
         <p>TypeScript</p>
       </li>
       <li>
-        <img src="../assets/techIcons/docker-icon.svg">
+        <img src="../assets/techIcons/docker-icon.svg" alt="Docker">
         <p>Docker</p>
       </li>
       <li>
-        <img src="../assets/techIcons/sass-lang-icon.svg">
+        <img src="../assets/techIcons/sass-lang-icon.svg" alt="sass">
         <p>sass</p>
       </li>
       <li>
-        <img src="../assets/techIcons/w3_html5-icon.svg">
+        <img src="../assets/techIcons/w3_html5-icon.svg" alt="html">
         <p>html</p>
       </li>
       <li>
-        <img src="../assets/techIcons/mongodb-icon.svg">
+        <img src="../assets/techIcons/mongodb-icon.svg" alt="mongoDb">
         <p>MongoDb</p>
       </li>
       <li>
-        <img src="../assets/techIcons/postgresql-icon.svg">
+        <img src="../assets/techIcons/postgresql-icon.svg" alt="postgreSql">
         <p>PostgreSql</p>
       </li>
       <li>
-        <img src="../assets/techIcons/firebase-icon.svg">
+        <img src="../assets/techIcons/firebase-icon.svg" alt="firebase">
         <p>Firebase</p>
       </li>
       <li>
-        <img src="../assets/techIcons/sqlite-icon.svg">
+        <img src="../assets/techIcons/sqlite-icon.svg" alt="sqlLite">
         <p>SqlLite</p>
       </li>
       <li>
-        <img src="../assets/techIcons/android-icon.svg">
+        <img src="../assets/techIcons/android-icon.svg" alt="android">
         <p>android</p>
       </li>
       <li>
-        <img src="../assets/techIcons/js_webpack-icon.svg">
+        <img src="../assets/techIcons/js_webpack-icon.svg" alt="webpack">
         <p>webpack</p>
       </li>
     </ul>
@@ -117,11 +117,16 @@
 </main>
 <footer class="footer">
   <ul class="footer-list">
-    <li><a href="#"><i class="mdi mdi-github"></i></a></li>
-    <li><a href="#"><i class="mdi mdi-linkedin"></i></a></li>
-    <li><a href="#"><i class="mdi mdi-twitter"></i></a></li>
-    <li><a href="#"><i class="mdi mdi-codepen"></i></a></li>
-    <li><a href="#"><i class="mdi mdi-facebook"></i></a></li>
+    <li><a href="https://github.com/VitaliiLynnyk"
+           target="_blank"><i class="mdi mdi-github"></i></a></li>
+    <li><a href="https://www.linkedin.com/in/vitaliilynnyk"
+           target="_blank"><i class="mdi mdi-linkedin"></i></a></li>
+    <li><a href="https://twitter.com/qu1etRain"
+           target="_blank"><i class="mdi mdi-twitter"></i></a></li>
+    <li><a href="https://codepen.io/VitaliiLynnyk"
+           target="_blank"><i class="mdi mdi-codepen"></i></a></li>
+    <li><a href="https://www.facebook.com/vitalii.lynnyk"
+           target="_blank"><i class="mdi mdi-facebook"></i></a></li>
   </ul>
   <div class="footer-about">
     <p>created by <a href="#">Vitalii lynnyk</a></p>
