copy/paste style/structure

--- a/src/app/containers/footer/footer.html
+++ b/src/app/containers/footer/footer.html
@@ -1,1 +1,18 @@
-footer
+<footer class="footer">
+  <ul class="footer-list">
+    <li><a href="https://github.com/VitaliiLynnyk"
+         target="_blank"><i class="mdi mdi-github"></i></a></li>
+    <li><a href="https://www.linkedin.com/in/vitaliilynnyk"
+         target="_blank"><i class="mdi mdi-linkedin"></i></a></li>
+    <li><a href="https://twitter.com/qu1etRain"
+         target="_blank"><i class="mdi mdi-twitter"></i></a></li>
+    <li><a href="https://codepen.io/VitaliiLynnyk"
+         target="_blank"><i class="mdi mdi-codepen"></i></a></li>
+    <li><a href="https://www.facebook.com/vitalii.lynnyk"
+         target="_blank"><i class="mdi mdi-facebook"></i></a></li>
+  </ul>
+  <div class="footer-about">
+    <p>created by <a href="#">Vitalii lynnyk</a></p>
+    <p>Copyright © 2020 | All Rights Reserved</p>
+  </div>
+</footer>
