--- a/src/app/containers/header/header.html
+++ b/src/app/containers/header/header.html
@@ -1,1 +1,27 @@
-header
+<header class="header">
+  <div class="header-logo">
+    <i class="mdi mdi-coffee header-logo__icon"></i>
+    <a href="#"
+       class="header-logo__name">vitalii lynnyk</a>
+  </div>
+
+  <input type="checkbox"
+         class="header-toggle__checkbox"
+         id="toggle">
+  <label for="toggle"
+         class="header-toggle header-toggle__button">
+    <span class="header-toggle header-toggle__icon">
+      &nbsp;
+    </span></label>
+  <div class="header-toggle header-toggle__background">&nbsp;</div>
+
+  <nav class="header-nav">
+    <ul class="header-nav__list">
+      <li class="header-nav__list-item"><a href="#">Home</a></li>
+      <li class="header-nav__list-item"><a href="#">Projects</a></li>
+      <li class="header-nav__list-item"><a href="#">Resume</a></li>
+      <li class="header-nav__list-item"><a href="#">Contacts</a></li>
+      <li class="header-nav__list-item"><a href="#">Change Theme</a></li>
+    </ul>
+  </nav>
+</header>
