--- a/src/app/containers/home/home.html
+++ b/src/app/containers/home/home.html
@@ -1,1 +1,103 @@
-home
+<main class="main">
+  <section class="main-left">
+    <div class="main-left-header">
+      <img src="../assets/vitaliilynnyk.png"
+           alt="logo" />
+      <h1>Vitalii Lynnyk</h1>
+      <p>Junior javaScript dev</p>
+    </div>
+    <details class="main-left-details">
+      <summary>
+        Hello, i'm developer, from Cherkasy, Ukraine, currently living in Warsaw, Poland.<br>
+        Today, i'm a student of Vistula University, Computer Engineering, Masters degree.
+      </summary>
+      <p>
+        I'm passionate about programming.<br>
+        I graduated Cherkasy state technological University Software Engineering,
+        Bachelor degree with honors. <br> Every day i learn something new.
+
+        <button>Download CV</button>
+      </p>
+    </details>
+  </section>
+  <section class="main-right">
+    <h3 class="main-right__title">Skills</h3>
+    <ul class="main-right__list">
+      <li>
+        <img src="../assets/techIcons/javascript-icon.svg"
+             alt="javaScript">
+        <p>javaScript</p>
+      </li>
+      <li>
+        <img src="../assets/techIcons/nodejs-horizontal.svg"
+             alt="node.js">
+        <p>Node.js</p>
+      </li>
+      <li>
+        <img src="../assets/techIcons/angular-icon.svg"
+             alt="angular">
+        <p>angular</p>
+      </li>
+      <li>
+        <img src="../assets/techIcons/reactjs-icon.svg"
+             alt="react">
+        <p>react</p>
+      </li>
+      <li>
+        <img src="../assets/techIcons/java-icon.svg"
+             alt="java">
+        <p>Java</p>
+      </li>
+      <li>
+        <img src="../assets/techIcons/typescriptlang-icon.svg"
+             alt="typeScript">
+        <p>TypeScript</p>
+      </li>
+      <li>
+        <img src="../assets/techIcons/docker-icon.svg"
+             alt="Docker">
+        <p>Docker</p>
+      </li>
+      <li>
+        <img src="../assets/techIcons/sass-lang-icon.svg"
+             alt="sass">
+        <p>sass</p>
+      </li>
+      <li>
+        <img src="../assets/techIcons/w3_html5-icon.svg"
+             alt="html">
+        <p>html</p>
+      </li>
+      <li>
+        <img src="../assets/techIcons/mongodb-icon.svg"
+             alt="mongoDb">
+        <p>MongoDb</p>
+      </li>
+      <li>
+        <img src="../assets/techIcons/postgresql-icon.svg"
+             alt="postgreSql">
+        <p>PostgreSql</p>
+      </li>
+      <li>
+        <img src="../assets/techIcons/firebase-icon.svg"
+             alt="firebase">
+        <p>Firebase</p>
+      </li>
+      <li>
+        <img src="../assets/techIcons/sqlite-icon.svg"
+             alt="sqlLite">
+        <p>SqlLite</p>
+      </li>
+      <li>
+        <img src="../assets/techIcons/android-icon.svg"
+             alt="android">
+        <p>android</p>
+      </li>
+      <li>
+        <img src="../assets/techIcons/js_webpack-icon.svg"
+             alt="webpack">
+        <p>webpack</p>
+      </li>
+    </ul>
+  </section>
+</main>
