--- a/src/app/containers/footer/footer.scss
+++ b/src/app/containers/footer/footer.scss
@@ -1,24 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Cormorant+Garamond|Luckiest+Guy&display=swap');
-
-//font-family: 'Luckiest Guy', cursive;
-//font-family: 'Cormorant Garamond', serif;
-
-$color-white: #fff;
-$color-dark: #000;
-//
-$color-primary: #094BFF;
-$color-primary-light: #4E7DFD; //1F5BFF
-$color-primary-dark: #012A9A;
-//
-$shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
-$shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
-//
-$font-family-main: 'Cormorant Garamond';
-$font-family-secondary: 'Luckiest Guy';
-
-
 .footer {
-  font-family: $font-family-main;
   text-align: center;
   padding: 2rem;
 
@@ -42,7 +22,7 @@ $font-family-secondary: 'Luckiest Guy';
           width: 5rem;
           height: 5rem;
           display: block;
-          background: linear-gradient(45deg, $color-primary-light, $color-primary-dark);
+          background: linear-gradient(45deg, var(--color-primary-light), var(--color-primary-dark));
           transition: all 265ms ease-out;
         }
 
@@ -53,8 +33,8 @@ $font-family-secondary: 'Luckiest Guy';
 
         &:hover i {
           transform: scale(2);
-          color: $color-primary;
-          background: -webkit-linear-gradient(45deg, $color-primary-light, $color-primary-dark);
+          color: var(--color-primary);
+          background: -webkit-linear-gradient(45deg, var(--color-primary-light), var(--color-primary-dark));
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;
           transition: all 265ms ease-in;
@@ -62,7 +42,7 @@ $font-family-secondary: 'Luckiest Guy';
       }
 
       i {
-        color: $color-white;
+        color: var(--color-white);
         position: absolute;
         font-size: 3rem;
         top: 0.5rem;
