--- a/src/app/containers/header/header.scss
+++ b/src/app/containers/header/header.scss
@@ -1,27 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Cormorant+Garamond|Luckiest+Guy&display=swap');
-
-//font-family: 'Luckiest Guy', cursive;
-//font-family: 'Cormorant Garamond', serif;
-
-$color-white: #fff;
-$color-dark: #000;
-//
-$color-primary: #094BFF;
-$color-primary-light: #4E7DFD; //1F5BFF
-$color-primary-dark: #012A9A;
-//
-$shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
-$shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
-//
-$font-family-main: 'Cormorant Garamond';
-$font-family-secondary: 'Luckiest Guy';
-
-
 .header {
   display: flex;
   justify-content: space-between;
-  background-color: rgba($color-white, .8);
-  box-shadow: $shadow-light;
+  background-color: rgba(var(--color-white), .8);
+  box-shadow: var(--shadow-light);
 
   height: 5rem;
   align-items: center;
@@ -29,7 +10,7 @@ $font-family-secondary: 'Luckiest Guy';
   position: fixed;
   z-index: 1;
   width: 100%;
-  font-family: $font-family-secondary;
+  font-family: var(--font-family-secondary);
 
   &-logo {
     &__icon {
@@ -75,7 +56,7 @@ $font-family-secondary: 'Luckiest Guy';
       &::after {
         width: 1.5rem;
         height: 2px;
-        background-color: $color-dark;
+        background-color: var(--color-dark);
         display: inline-block;
       }
 
@@ -103,7 +84,7 @@ $font-family-secondary: 'Luckiest Guy';
       position: fixed;
       top: 10px;
       right: 10px;
-      background-image: radial-gradient($color-primary-light, $color-primary-dark);
+      background-image: radial-gradient(var(--color-primary-light), var(--color-primary-dark));
       z-index: 1000;
       transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
     }
@@ -180,7 +161,7 @@ $font-family-secondary: 'Luckiest Guy';
           &:visited {
             display: inline-block;
             font-weight: 300;
-            color: $color-dark;
+            color: var(--color-dark);
             text-decoration: none;
             text-transform: uppercase;
             //background-image: linear-gradient(
