--- a/src/app/containers/home/home.scss
+++ b/src/app/containers/home/home.scss
@@ -1,27 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Cormorant+Garamond|Luckiest+Guy&display=swap');
-
-//font-family: 'Luckiest Guy', cursive;
-//font-family: 'Cormorant Garamond', serif;
-
-$color-white: #fff;
-$color-dark: #000;
-//
-$color-primary: #094BFF;
-$color-primary-light: #4E7DFD; //1F5BFF
-$color-primary-dark: #012A9A;
-//
-$shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
-$shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
-//
-$font-family-main: 'Cormorant Garamond';
-$font-family-secondary: 'Luckiest Guy';
-
 .main {
   min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr 1fr;
-
-
 
   @media (max-width: 730px) {
     grid-template-columns: 1fr;
@@ -32,8 +12,6 @@ $font-family-secondary: 'Luckiest Guy';
     display: grid;
     grid-template-rows: repeat(auto-fill, minmax(250px, 1fr));;
     grid-gap: 1rem;
-
-    font-family: $font-family-main;
 
     @media (max-width: 730px) {
       padding-bottom: 0;
@@ -48,7 +26,7 @@ $font-family-secondary: 'Luckiest Guy';
 
       h1 {
         text-transform: uppercase;
-        font-family: $font-family-secondary;
+        font-weight: 800;
       }
 
       p {
@@ -76,7 +54,6 @@ $font-family-secondary: 'Luckiest Guy';
 
     &__title {
       font-size: 5rem;
-      font-family: $font-family-main;
     }
 
     &__list {
@@ -90,10 +67,10 @@ $font-family-secondary: 'Luckiest Guy';
 
       li {
         padding: .5rem;
-        font-family: $font-family-main;
 
         img {
           filter: invert(1) sepia(1) saturate(5) hue-rotate(175deg);
+
           &:hover {
             filter: none;
           }
