--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,20 @@
+@import url('https://fonts.googleapis.com/css?family=Cormorant+Garamond|Luckiest+Guy&display=swap');
+
+:root {
+  --color-white: #fff;
+  --color-dark: #000;
+
+  --color-primary: #094BFF;
+  --color-primary-light: #4E7DFD; //1F5BFF
+  --color-primary-dark: #012A9A;
+
+  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+
+  --font-family-main: 'Cormorant Garamond', serif;
+  --font-family-secondary: 'Luckiest Guy', cursive;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -9,7 +26,7 @@ html {
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: var(--font-family-main);
   font-weight: 400;
   line-height: 1.6;
   min-height: 100vh;
@@ -23,7 +40,9 @@ body {
 }
 
 .particles-js-canvas-el {
-  position: fixed !important;
+  position: fixed;
+  left: 0;
+  top: 0;
   height: 100vh;
   min-height: 100vh;
   max-height: 100vh;
