--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,4 @@
+<div appParticle></div>
 <app-header></app-header>
 <app-home></app-home>
 <app-footer></app-footer>
-
-
-
-<!--<div appParticle></div>-->
-
-
-
