add cv / and folder for particle

--- a/src/app/containers/home/home.html
+++ b/src/app/containers/home/home.html
@@ -15,14 +15,25 @@
         I'm passionate about programming.<br>
         I graduated Cherkasy state technological University Software Engineering,
         Bachelor degree with honors. <br> Every day i learn something new.
-
-        <button>Download CV</button>
+        <br>
+        <a href="../../../assets/cv/CV_VitaliiLynnyk_v1.pdf"
+           class="btn btn--blue btn--center">Download CV</a>
       </p>
     </details>
   </section>
   <section class="main-right">
     <h3 class="main-right__title">Skills</h3>
     <ul class="main-right__list">
+      <li>
+        <img src="../assets/techIcons/w3_html5-icon.svg"
+             alt="html">
+        <p>html</p>
+      </li>
+      <li>
+        <img src="../assets/techIcons/sass-lang-icon.svg"
+             alt="sass">
+        <p>sass</p>
+      </li>
       <li>
         <img src="../assets/techIcons/javascript-icon.svg"
              alt="javaScript">
@@ -43,30 +54,21 @@
              alt="react">
         <p>react</p>
       </li>
-      <li>
-        <img src="../assets/techIcons/java-icon.svg"
-             alt="java">
-        <p>Java</p>
-      </li>
+
       <li>
         <img src="../assets/techIcons/typescriptlang-icon.svg"
              alt="typeScript">
         <p>TypeScript</p>
       </li>
       <li>
-        <img src="../assets/techIcons/docker-icon.svg"
-             alt="Docker">
-        <p>Docker</p>
+        <img src="../assets/techIcons/java-icon.svg"
+             alt="java">
+        <p>Java</p>
       </li>
       <li>
-        <img src="../assets/techIcons/sass-lang-icon.svg"
-             alt="sass">
-        <p>sass</p>
-      </li>
-      <li>
-        <img src="../assets/techIcons/w3_html5-icon.svg"
-             alt="html">
-        <p>html</p>
+        <img src="../assets/techIcons/android-icon.svg"
+             alt="android">
+        <p>android</p>
       </li>
       <li>
         <img src="../assets/techIcons/mongodb-icon.svg"
@@ -89,14 +91,14 @@
         <p>SqlLite</p>
       </li>
       <li>
-        <img src="../assets/techIcons/android-icon.svg"
-             alt="android">
-        <p>android</p>
-      </li>
-      <li>
         <img src="../assets/techIcons/js_webpack-icon.svg"
              alt="webpack">
         <p>webpack</p>
+      </li>
+      <li>
+        <img src="../assets/techIcons/docker-icon.svg"
+             alt="Docker">
+        <p>Docker</p>
       </li>
     </ul>
   </section>
