--- a/src/app/containers/home/home.scss
+++ b/src/app/containers/home/home.scss
@@ -80,3 +80,24 @@
     }
   }
 }
+
+.btn {
+  color: var(--color-white);
+  padding: 1rem;
+  font-size: inherit;
+  border: none;
+  display: inline-block;
+  transition: all 265ms ease-in;
+
+  &:hover {
+    transform: translateY(.1rem);
+  }
+
+  &--blue {
+    background: -webkit-linear-gradient(45deg, var(--color-primary-light), var(--color-primary-dark));
+  }
+
+  &--center {
+    margin: 1rem auto;
+  }
+}
