--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,3 @@
 <div appParticle></div>
-<app-header></app-header>
-<app-home></app-home>
-<app-footer></app-footer>
+
+<app-portal-page></app-portal-page>
