--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="header-logo">
     <i class="mdi mdi-coffee header-logo__icon"></i>
-    <a href="#"
+    <a routerLink="home"
        class="header-logo__name">vitalii lynnyk</a>
   </div>
 
@@ -17,10 +17,10 @@
 
   <nav class="header-nav">
     <ul class="header-nav__list">
-      <li class="header-nav__list-item"><a href="#">Home</a></li>
-      <li class="header-nav__list-item"><a href="#">Projects</a></li>
+      <li class="header-nav__list-item"><a routerLink="home">Home</a></li>
+      <li class="header-nav__list-item"><a routerLink="projects">Projects</a></li>
       <li class="header-nav__list-item"><a href="#">Resume</a></li>
-      <li class="header-nav__list-item"><a href="#">Contacts</a></li>
+      <li class="header-nav__list-item"><a routerLink="contacts">Contacts</a></li>
       <li class="header-nav__list-item"><a href="#">Change Theme</a></li>
     </ul>
   </nav>
