--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -17,11 +17,25 @@
 
   <nav class="header-nav">
     <ul class="header-nav__list">
-      <li class="header-nav__list-item"><a routerLink="home">Home</a></li>
-      <li class="header-nav__list-item"><a routerLink="projects">Projects</a></li>
-      <li class="header-nav__list-item"><a href="#">Resume</a></li>
-      <li class="header-nav__list-item"><a routerLink="contacts">Contacts</a></li>
-      <li class="header-nav__list-item"><a href="#">Change Theme</a></li>
+      <li class="header-nav__list-item">
+        <a routerLink="home"
+           routerLinkActive="active">Home</a>
+      </li>
+      <li class="header-nav__list-item">
+        <a routerLink="projects"
+           routerLinkActive="active">Projects</a>
+      </li>
+      <li class="header-nav__list-item">
+        <a routerLink="resume"
+           routerLinkActive="active">Resume</a>
+      </li>
+      <li class="header-nav__list-item">
+        <a routerLink="contacts"
+           routerLinkActive="active">Contacts</a>
+      </li>
+      <li class="header-nav__list-item">
+        <a href="#">Change Theme</a>
+      </li>
     </ul>
   </nav>
 </header>
