add projects test page with cards styling

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,15 +41,9 @@ body {
   }
 }
 
-.particles-js-canvas-el {
-  position: fixed;
-  left: 0;
-  top: 0;
+#particles-js {
+  position: fixed !important;
   height: 100vh;
-  min-height: 100vh;
-  max-height: 100vh;
   width: 100vw;
-  min-width: 100vw;
-  max-width: 100vw;
-  z-index: -1;
+  z-index: -1 !important;
 }
