--- a/src/app/components/home/home.scss
+++ b/src/app/components/home/home.scss
@@ -10,7 +10,7 @@
   &-left {
     padding: 10rem 2.5rem 5rem 2.5rem;
     display: grid;
-    grid-template-rows: repeat(auto-fill, minmax(250px, 1fr));;
+    grid-template-rows: repeat(auto-fill, minmax(250px, 1fr));
     grid-gap: 1rem;
 
     @media (max-width: 730px) {
@@ -71,6 +71,7 @@
 
         img {
           filter: invert(1) sepia(1) saturate(5) hue-rotate(175deg);
+          cursor: pointer;
 
           &:hover {
             filter: none;
